--- a/resources/css/app.pcss
+++ b/resources/css/app.pcss
@@ -8,6 +8,7 @@
 @import 'Components/cards.pcss';
 @import 'Components/layout.pcss';
 @import 'Components/modals.pcss';
+@import 'Components/slider.pcss';
 
 @import 'Utilities/typography.pcss';
 
